--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server &&  hexo online"
+    "server": "hexo server"
   },
   "hexo": {
     "version": "5.4.0"
@@ -22,6 +22,7 @@
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-thumbnails": "0.0.6"
   }
 }
